cmss/main/default/objects/LifeInsuranceRisk__c/LifeInsuranceRisk__c.object-meta.xml
<CustomObject>
    <label>Life Insurance Risk</label>
    <nameField>
        <label>LifeInsurance Risk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Life Insurance Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>