cmss/main/default/objects/LifeInsuranceRisk__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Life Insurance Risks</relationshipLabel>
    <relationshipName>LifeInsuranceRisks</relationshipName>
    <type>Lookup</type>
</CustomField>