cmss/main/default/objects/LifeInsuranceRisk__c/fields/CltFullName__c.field-meta.xml
<CustomField>
    <fullName>CltFullName__c</fullName>
    <label>Clt Full Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>