cmss/main/default/objects/LifeInsuranceRisk__c/fields/CltRelatedRole__c.field-meta.xml
<CustomField>
    <fullName>CltRelatedRole__c</fullName>
    <label>Clt Related Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>