cmss/main/default/objects/LifeInsuranceRisk__c/fields/Risk__c.field-meta.xml
<CustomField>
    <fullName>Risk__c</fullName>
    <label>Risk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AS</fullName>
            </value>
            <value>
                <fullName>DO V</fullName>
            </value>
            <value>
                <fullName>DO V d</fullName>
            </value>
            <value>
                <fullName>DO VM</fullName>
            </value>
            <value>
                <fullName>DO VM d</fullName>
            </value>
            <value>
                <fullName>DO8Z-11</fullName>
            </value>
            <value>
                <fullName>DO8Z-d-11</fullName>
            </value>
            <value>
                <fullName>DO8Zd-G11</fullName>
            </value>
            <value>
                <fullName>DO8Zd-G12</fullName>
            </value>
            <value>
                <fullName>DO8Z-G11</fullName>
            </value>
            <value>
                <fullName>DO8Z-G12</fullName>
            </value>
            <value>
                <fullName>HO1-11</fullName>
            </value>
            <value>
                <fullName>HO1-d-11</fullName>
            </value>
            <value>
                <fullName>HO1d-G11</fullName>
            </value>
            <value>
                <fullName>HO1d-G12</fullName>
            </value>
            <value>
                <fullName>HO1-G11</fullName>
            </value>
            <value>
                <fullName>HO1-G12</fullName>
            </value>
            <value>
                <fullName>HO-b</fullName>
            </value>
            <value>
                <fullName>HU1-11</fullName>
            </value>
            <value>
                <fullName>HU1-G11</fullName>
            </value>
            <value>
                <fullName>HU1-G12</fullName>
            </value>
            <value>
                <fullName>IO KA</fullName>
            </value>
            <value>
                <fullName>IO KL</fullName>
            </value>
            <value>
                <fullName>IO RD-T13</fullName>
            </value>
            <value>
                <fullName>IO+</fullName>
            </value>
            <value>
                <fullName>IO+ KA</fullName>
            </value>
            <value>
                <fullName>IO+ KL</fullName>
            </value>
            <value>
                <fullName>IO-11</fullName>
            </value>
            <value>
                <fullName>IO-G11</fullName>
            </value>
            <value>
                <fullName>IO-G12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>